# AutoReji

./: .gitignore  AutoReji_Blueprint.md  CHANGELOG.md  CLAUDE.md  DEVAM.md  LICENSE  PLAN.md  README.md
.claude/: launch.json  settings.json
_manifest/: 18_Bo_lu_m_Heavy_Rain_on_the_Tower_Library_Forest_House_Image_Prompt_manifest.json  1_Bo_lu_m_Glass_Pyramid_Shelter_in_Heavy_Rain_Image_Prompt_manifest.json  2_Glass_Dome_Treehouse_in_Heavy_Rain_manifest.json  crop_scales.json  video_analysis.json  vlm_scene.json
brain/: README.md  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
brain/public/: episode.json
brain/src-tauri/: Cargo.toml  Entitlements.plist  tauri.conf.json
brain/src-tauri/capabilities/: default.json
brain/src-tauri/icons/: icon.icns
brain/src-tauri/src/: lib.rs  main.rs
config/: config.toml
docs/: Blueprint.md  GUNCELLEME_MIMARISI.md  UI_GELISTIRME_FIKIRLERI.md  UI_UX_DENETIM_2026-07-02.md  YOL_HARITASI_VE_VIZYON.md
panel/: index.html  main.js  manifest.json  ui.js
premiere deneme/: d.prproj  deneme v9.prproj  deneme.prproj  deneme2.prproj  deneme4.prproj
scripts/: build.sh  build_sidecar.sh  dev.sh  ds_guard.sh  fetch_models.sh  pack_panel.sh  pyi_rthook_config.py  setup.sh
sidecar/: analyze_video.py  build_manifest.py  cli.py  decide.py  detect_crop.py  match.py  parser.py  trim.py  vlm_scene.py
örnek_image_prompts/: (108.Bölüm) Greenhill Turf House Image Prompt.txt  (114.Bölüm) Spiral Bookshop Tower Image Prompt.txt  (13.Bölüm) Heavy Rain on the Moss-Roof Garden Cottage Image Prompt.txt  (+17 more)
(+76 files in other folders)
