[package]
name = "autoreji"
version = "1.2.0"
description = "AutoReji — Ghibli Mood ON otomatik kurgu"
authors = ["Madyes"]
license-file = "../../LICENSE"
publish = false
edition = "2021"
rust-version = "1.77.2"

# lib: Tauri 2 mobil-hazır yapı (masaüstü için de standart)
[lib]
name = "autoreji_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Prod: küçük + hızlı .app
[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
